# oop-assignments

./: .gitignore
lab1/: CMakeLists.txt  main.cpp
lab1/mymath/: CMakeLists.txt  mymath.cpp  mymath.hpp
lab1/myprint/: CMakeLists.txt  myprint.cpp  myprint.hpp
lab2/: CMakeLists.txt  main.cpp
lab2/computer/: CMakeLists.txt  computer.cpp  computer.hpp
lab2/input/: CMakeLists.txt  input.cpp  input.hpp
lab2/planet/: CMakeLists.txt  planet.cpp  planet.hpp
lab2/star/: CMakeLists.txt  star.cpp  star.hpp
lab3/: CMakeLists.txt  main.cpp
lab3/fraction/: CMakeLists.txt  fraction.cpp  fraction.hpp
lab4/: CMakeLists.txt  main.cpp
lab4/MyStack/: CMakeLists.txt  MyStack.cpp  MyStack.hpp
lab5/: CMakeLists.txt  main.cpp
lab5/MySet/: CMakeLists.txt  MySet.cpp  MySet.hpp
lab5/MyVector/: CMakeLists.txt  MyVector.cpp  MyVector.hpp
lab6/: CMakeLists.txt  main.cpp
lab6/MyVector/: MyVector.cpp  MyVector.hpp
lab6/Polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.hpp
lab6/Term/: CMakeLists.txt  Term.cpp  Term.hpp
lab7/: CMakeLists.txt  main.cpp
lab7/Engineering/: CMakeLists.txt  Device.cpp  Device.hpp  Mechanism.cpp  Mechanism.hpp  Node.cpp  Node.hpp  Part.cpp  Part.hpp
lab8/: CMakeLists.txt  main.cpp
